ran epoch=4 and added that file

--- a/dvclive/report.html
+++ b/dvclive/report.html
@@ -25,7 +25,7 @@
 <tr><th>train                                                   </th><th>eval                                                    </th><th style="text-align: right;">  step</th></tr>
 </thead>
 <tbody>
-<tr><td>{&#x27;loss&#x27;: 0.14083260297775269, &#x27;acc&#x27;: 0.9560999870300293}</td><td>{&#x27;loss&#x27;: 0.07694806903600693, &#x27;acc&#x27;: 0.9775000214576721}</td><td style="text-align: right;">     2</td></tr>
+<tr><td>{&#x27;loss&#x27;: 0.12380722910165787, &#x27;acc&#x27;: 0.9610499739646912}</td><td>{&#x27;loss&#x27;: 0.06939858943223953, &#x27;acc&#x27;: 0.9794999957084656}</td><td style="text-align: right;">     3</td></tr>
 </tbody>
 </table>
             </div>
@@ -40,17 +40,22 @@
     {
         "rev": "workspace",
         "step": "0",
-        "train/loss": "0.4171864688396454"
+        "train/loss": "0.41021814942359924"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "train/loss": "0.19282665848731995"
+        "train/loss": "0.1997797191143036"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "train/loss": "0.14083260297775269"
+        "train/loss": "0.15111187100410461"
+    },
+    {
+        "rev": "workspace",
+        "step": "3",
+        "train/loss": "0.12380722910165787"
     }
 ]
     },
@@ -180,17 +185,22 @@
     {
         "rev": "workspace",
         "step": "0",
-        "train/acc": "0.8737666606903076"
+        "train/acc": "0.8767499923706055"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "train/acc": "0.9418833255767822"
+        "train/acc": "0.9394833445549011"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "train/acc": "0.9560999870300293"
+        "train/acc": "0.9525333046913147"
+    },
+    {
+        "rev": "workspace",
+        "step": "3",
+        "train/acc": "0.9610499739646912"
     }
 ]
     },
@@ -318,19 +328,24 @@
     "data": {
         "values": [
     {
-        "eval/loss": "0.17842401564121246",
+        "eval/loss": "0.16000834107398987",
         "rev": "workspace",
         "step": "0"
     },
     {
-        "eval/loss": "0.10170172899961472",
+        "eval/loss": "0.10192593187093735",
         "rev": "workspace",
         "step": "1"
     },
     {
-        "eval/loss": "0.07694806903600693",
+        "eval/loss": "0.08516982942819595",
         "rev": "workspace",
         "step": "2"
+    },
+    {
+        "eval/loss": "0.06939858943223953",
+        "rev": "workspace",
+        "step": "3"
     }
 ]
     },
@@ -458,19 +473,24 @@
     "data": {
         "values": [
     {
-        "eval/acc": "0.944100022315979",
+        "eval/acc": "0.9531000256538391",
         "rev": "workspace",
         "step": "0"
     },
     {
-        "eval/acc": "0.9708999991416931",
+        "eval/acc": "0.9692999720573425",
         "rev": "workspace",
         "step": "1"
     },
     {
-        "eval/acc": "0.9775000214576721",
+        "eval/acc": "0.9728999733924866",
         "rev": "workspace",
         "step": "2"
+    },
+    {
+        "eval/acc": "0.9794999957084656",
+        "rev": "workspace",
+        "step": "3"
     }
 ]
     },
