ran epoch=6 and added that file

--- a/dvclive/report.html
+++ b/dvclive/report.html
@@ -22,10 +22,10 @@
             <div style="display: flex;justify-content: center;">
                 <table>
 <thead>
-<tr><th>train                                                   </th><th>eval                                                    </th><th style="text-align: right;">  step</th></tr>
+<tr><th>train                                                   </th><th>eval                                                   </th><th style="text-align: right;">  step</th></tr>
 </thead>
 <tbody>
-<tr><td>{&#x27;loss&#x27;: 0.12380722910165787, &#x27;acc&#x27;: 0.9610499739646912}</td><td>{&#x27;loss&#x27;: 0.06939858943223953, &#x27;acc&#x27;: 0.9794999957084656}</td><td style="text-align: right;">     3</td></tr>
+<tr><td>{&#x27;loss&#x27;: 0.08636543899774551, &#x27;acc&#x27;: 0.9729499816894531}</td><td>{&#x27;loss&#x27;: 0.04868151992559433, &#x27;acc&#x27;: 0.983299970626831}</td><td style="text-align: right;">     5</td></tr>
 </tbody>
 </table>
             </div>
@@ -40,22 +40,32 @@
     {
         "rev": "workspace",
         "step": "0",
-        "train/loss": "0.41021814942359924"
+        "train/loss": "0.40301215648651123"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "train/loss": "0.1997797191143036"
+        "train/loss": "0.18435831367969513"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "train/loss": "0.15111187100410461"
+        "train/loss": "0.13848772644996643"
     },
     {
         "rev": "workspace",
         "step": "3",
-        "train/loss": "0.12380722910165787"
+        "train/loss": "0.11643235385417938"
+    },
+    {
+        "rev": "workspace",
+        "step": "4",
+        "train/loss": "0.09985703229904175"
+    },
+    {
+        "rev": "workspace",
+        "step": "5",
+        "train/loss": "0.08636543899774551"
     }
 ]
     },
@@ -185,22 +195,32 @@
     {
         "rev": "workspace",
         "step": "0",
-        "train/acc": "0.8767499923706055"
+        "train/acc": "0.8794500231742859"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "train/acc": "0.9394833445549011"
+        "train/acc": "0.9437166452407837"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "train/acc": "0.9525333046913147"
+        "train/acc": "0.9575833082199097"
     },
     {
         "rev": "workspace",
         "step": "3",
-        "train/acc": "0.9610499739646912"
+        "train/acc": "0.9645000100135803"
+    },
+    {
+        "rev": "workspace",
+        "step": "4",
+        "train/acc": "0.9691166877746582"
+    },
+    {
+        "rev": "workspace",
+        "step": "5",
+        "train/acc": "0.9729499816894531"
     }
 ]
     },
@@ -328,24 +348,34 @@
     "data": {
         "values": [
     {
-        "eval/loss": "0.16000834107398987",
+        "eval/loss": "0.14395076036453247",
         "rev": "workspace",
         "step": "0"
     },
     {
-        "eval/loss": "0.10192593187093735",
+        "eval/loss": "0.09786014258861542",
         "rev": "workspace",
         "step": "1"
     },
     {
-        "eval/loss": "0.08516982942819595",
+        "eval/loss": "0.07183029502630234",
         "rev": "workspace",
         "step": "2"
     },
     {
-        "eval/loss": "0.06939858943223953",
+        "eval/loss": "0.06575330346822739",
         "rev": "workspace",
         "step": "3"
+    },
+    {
+        "eval/loss": "0.05340125039219856",
+        "rev": "workspace",
+        "step": "4"
+    },
+    {
+        "eval/loss": "0.04868151992559433",
+        "rev": "workspace",
+        "step": "5"
     }
 ]
     },
@@ -473,24 +503,34 @@
     "data": {
         "values": [
     {
-        "eval/acc": "0.9531000256538391",
+        "eval/acc": "0.9593999981880188",
         "rev": "workspace",
         "step": "0"
     },
     {
-        "eval/acc": "0.9692999720573425",
+        "eval/acc": "0.972000002861023",
         "rev": "workspace",
         "step": "1"
     },
     {
-        "eval/acc": "0.9728999733924866",
+        "eval/acc": "0.977400004863739",
         "rev": "workspace",
         "step": "2"
     },
     {
-        "eval/acc": "0.9794999957084656",
+        "eval/acc": "0.9787999987602234",
         "rev": "workspace",
         "step": "3"
+    },
+    {
+        "eval/acc": "0.9822999835014343",
+        "rev": "workspace",
+        "step": "4"
+    },
+    {
+        "eval/acc": "0.983299970626831",
+        "rev": "workspace",
+        "step": "5"
     }
 ]
     },
