ran epoch=7 and added that file

--- a/dvclive/report.html
+++ b/dvclive/report.html
@@ -22,10 +22,10 @@
             <div style="display: flex;justify-content: center;">
                 <table>
 <thead>
-<tr><th>train                                                   </th><th>eval                                                   </th><th style="text-align: right;">  step</th></tr>
+<tr><th>train                                                   </th><th>eval                                                    </th><th style="text-align: right;">  step</th></tr>
 </thead>
 <tbody>
-<tr><td>{&#x27;loss&#x27;: 0.08636543899774551, &#x27;acc&#x27;: 0.9729499816894531}</td><td>{&#x27;loss&#x27;: 0.04868151992559433, &#x27;acc&#x27;: 0.983299970626831}</td><td style="text-align: right;">     5</td></tr>
+<tr><td>{&#x27;loss&#x27;: 0.08184705674648285, &#x27;acc&#x27;: 0.9746666550636292}</td><td>{&#x27;loss&#x27;: 0.04878968372941017, &#x27;acc&#x27;: 0.9842000007629395}</td><td style="text-align: right;">     6</td></tr>
 </tbody>
 </table>
             </div>
@@ -40,32 +40,37 @@
     {
         "rev": "workspace",
         "step": "0",
-        "train/loss": "0.40301215648651123"
+        "train/loss": "0.35818952322006226"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "train/loss": "0.18435831367969513"
+        "train/loss": "0.16935184597969055"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "train/loss": "0.13848772644996643"
+        "train/loss": "0.13682764768600464"
     },
     {
         "rev": "workspace",
         "step": "3",
-        "train/loss": "0.11643235385417938"
+        "train/loss": "0.11512114852666855"
     },
     {
         "rev": "workspace",
         "step": "4",
-        "train/loss": "0.09985703229904175"
+        "train/loss": "0.10426425188779831"
     },
     {
         "rev": "workspace",
         "step": "5",
-        "train/loss": "0.08636543899774551"
+        "train/loss": "0.09217958897352219"
+    },
+    {
+        "rev": "workspace",
+        "step": "6",
+        "train/loss": "0.08184705674648285"
     }
 ]
     },
@@ -195,32 +200,37 @@
     {
         "rev": "workspace",
         "step": "0",
-        "train/acc": "0.8794500231742859"
+        "train/acc": "0.8938000202178955"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "train/acc": "0.9437166452407837"
+        "train/acc": "0.947950005531311"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "train/acc": "0.9575833082199097"
+        "train/acc": "0.9574666619300842"
     },
     {
         "rev": "workspace",
         "step": "3",
-        "train/acc": "0.9645000100135803"
+        "train/acc": "0.9641166925430298"
     },
     {
         "rev": "workspace",
         "step": "4",
-        "train/acc": "0.9691166877746582"
+        "train/acc": "0.9678999781608582"
     },
     {
         "rev": "workspace",
         "step": "5",
-        "train/acc": "0.9729499816894531"
+        "train/acc": "0.9710500240325928"
+    },
+    {
+        "rev": "workspace",
+        "step": "6",
+        "train/acc": "0.9746666550636292"
     }
 ]
     },
@@ -348,34 +358,39 @@
     "data": {
         "values": [
     {
-        "eval/loss": "0.14395076036453247",
+        "eval/loss": "0.13212716579437256",
         "rev": "workspace",
         "step": "0"
     },
     {
-        "eval/loss": "0.09786014258861542",
+        "eval/loss": "0.08732086420059204",
         "rev": "workspace",
         "step": "1"
     },
     {
-        "eval/loss": "0.07183029502630234",
+        "eval/loss": "0.07181289047002792",
         "rev": "workspace",
         "step": "2"
     },
     {
-        "eval/loss": "0.06575330346822739",
+        "eval/loss": "0.06078677996993065",
         "rev": "workspace",
         "step": "3"
     },
     {
-        "eval/loss": "0.05340125039219856",
+        "eval/loss": "0.05383951589465141",
         "rev": "workspace",
         "step": "4"
     },
     {
-        "eval/loss": "0.04868151992559433",
+        "eval/loss": "0.05312320590019226",
         "rev": "workspace",
         "step": "5"
+    },
+    {
+        "eval/loss": "0.04878968372941017",
+        "rev": "workspace",
+        "step": "6"
     }
 ]
     },
@@ -503,34 +518,39 @@
     "data": {
         "values": [
     {
-        "eval/acc": "0.9593999981880188",
+        "eval/acc": "0.9595000147819519",
         "rev": "workspace",
         "step": "0"
     },
     {
-        "eval/acc": "0.972000002861023",
+        "eval/acc": "0.9711999893188477",
         "rev": "workspace",
         "step": "1"
     },
     {
-        "eval/acc": "0.977400004863739",
+        "eval/acc": "0.9775000214576721",
         "rev": "workspace",
         "step": "2"
     },
     {
-        "eval/acc": "0.9787999987602234",
+        "eval/acc": "0.9803000092506409",
         "rev": "workspace",
         "step": "3"
     },
     {
-        "eval/acc": "0.9822999835014343",
+        "eval/acc": "0.9817000031471252",
         "rev": "workspace",
         "step": "4"
     },
     {
-        "eval/acc": "0.983299970626831",
+        "eval/acc": "0.9828000068664551",
         "rev": "workspace",
         "step": "5"
+    },
+    {
+        "eval/acc": "0.9842000007629395",
+        "rev": "workspace",
+        "step": "6"
     }
 ]
     },
